<resources>
    <string name="app_name">EWellness App</string>
    <string name="main_activity_description">Simply chat with your mentors.</string>

    <string name="login">Log in</string>
    <string name="chat_with_mentor">Chat with a mentor</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"You have received a notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You must log in!</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="button_login_text_logged">Display Profile</string>
    <string name="button_login_text_not_logged">Login</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Your Profile</string>
    <string name="text_input_username">User Name: </string>
    <string name="text_view_email">Email Address:</string>
    <string name="button_update_account">Update username</string>
    <string name="button_delete_account">Delete my account</string>
    <string name="button_sign_out_account">Logout</string>
    <string name="info_no_email_found">No email address</string>
    <string name="info_no_username_found">No username</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="check_box_is_mentor">Are you a mentor?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chat chats</string>
    <string name="text_input_title_mentor_chat_activity">Compose your message</string>
    <string name="button_title_mentor_chat_activity">SEND</string>
    <string name="text_view_mentor_chat_error">This discussion thread does not contain any messages for the moment.&#8230;</string>
    <string name="popup_title_permission_files_access">This app needs permission to work.</string>
    <string name="toast_title_no_image_chosen">No image chosen&#8230;</string>
    <!-- Book api -->
    <string name="thumbnail">thumbnail</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="price">R900</string>
    <string name="author">Author</string>


    <string name="search">SEARCH</string>
    <string name="hint">Enter your query </string>
    <string name="description_image_view">Template for  the image</string>
    <string name="description_divider">Divider</string>
    <string name="Failed_to_Load_data">Please check your Internet Connection</string>
    <string name="NO_RESULT">No matching results</string>

    <string-array name="record_type">
        <item>Consultation</item>
        <item>Hospitalisation</item>
    </string-array>

    <string-array name="specialist_spinner">
        <item>Dentist</item>
        <item>General physician</item>
        <item>ENT</item>
        <item>Ophthalmologist</item>
        <item>Pediatrician</item>
        <item>Radiologist</item>
        <item>Rheumatologist</item>
    </string-array>

    <string-array name="blood_spinner">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor">Doctor</string>
    <string name="_5_00_pm">5:00 PM</string>
    <string name="appointment_type">Appointment type</string>
    <string name="doctor_name">Doctor NAME</string>
    <string name="see_sheet">See sheet</string>
    <string name="patient_name">Patient name</string>
    <string name="status">Status:</string>
    <string name="accepted">Accepted</string>
    <string name="hospitalisation">Hospitalisation</string>
    <string name="_0652316456">0652316456</string>
    <string name="_12_07_2021_at_9pm">12/07/2021 at 9pm</string>
    <string name="online">Online</string>
    <string name="accept">Accept</string>
    <string name="_061243582">061243582</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="_9_00_9_30">9:00 – 9:30</string>
    <string name="available">Available</string>
    <string name="next">Next</string>
    <string name="previous">previous</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="type_of_service">Type of Service</string>
    <string name="add">Add</string>
    <string name="treatment">Treatment</string>
    <string name="disease">Disease</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="_19">19</string>
    <string name="july">July</string>
    <string name="wed">WED</string>
    <string name="timing">Timing</string>
    <string name="consultation">Consultation</string>
    <string name="_23_06_20_at_9pm">23/06/20 at 9pm</string>
    <string name="decline">Decline</string>
    <string name="_0652167895">0652167895</string>
    <string name="physical_information">Patient Information</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="update_info">update info</string>
    <string name="blood_type">Blood Type</string>
    <string name="select_your_appointment_purpose">Select your appointment purpose</string>
    <string name="my_calendar">My Calendar</string>
    <string name="signout">SignOut</string>
    <string name="appointment">Appointment</string>
    <string name="patient_request">Patient Request</string>
    <string name="my_patients">My Patients</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="how_we_can_help_you_today">How we can help you today?</string>
    <string name="welcome">Welcome</string>
    <string name="thank_you_for_choosing_our_service">Thank you for choosing our service !</string>
    <string name="appointment_information">Appointment information</string>
    <string name="_10h00_at_31_07_2021">10h00 at 31/07/2021</string>
    <string name="lebogang">Lebogang</string>
    <string name="_0629123612">0629123612</string>
    <string name="confirm">CONFIRM</string>
    <string name="choose_your_appointment_time">Choose your appointment time:</string>
    <string name="my_profile">My Profile</string>
    <string name="patient">Patient</string>
    <string name="about">About</string>
    <string name="_27_0_011_649_5555">+27 (0) 011 649 5555</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="book">BOOK</string>
    <string name="all">all</string>
    <string name="rheumatologist">Rheumatologist</string>
    <string name="radiologist">Radiologist</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="ophthalmologist">Ophthalmologist</string>
    <string name="ent">ENT</string>
    <string name="gp">GP</string>
    <string name="dentist">Dentist</string>
    <string name="back">back</string>
    <string name="edit">edit</string>
    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
        -->
</resources>

