<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sfg.EWellnessSFG.fragment.BookingStep3Fragment"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/valide"
        android:background="#DAFBDF"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_for_choosing_our_service"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_information"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:paddingTop="25dp"
        android:paddingStart="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/ic_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_booking_time_text"
                android:text="@string/_10h00_at_31_07_2021"
                android:textSize="14sp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/ic_account_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_booking_berber_text"
                android:text="@string/lebogang"
                android:textSize="14sp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/ic_local_hospital_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_booking_type"
                android:text="@string/consultation"
                android:textSize="14sp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/ic_phone_android_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_booking_phone"
                android:text="@string/_0629123612"
                android:textSize="14sp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>